# Best-Practices-Git

./: .gitignore  AUDIT_TRAIL.md  README.md  portfolio_valuation_manifest.json  pyproject.toml  sample.out
.github/workflows/: build-manuscript.yml  ci.yml  private-submission-build.yml
checklists/: query-to-publish.md
docs/: auto-pipeline-verification.md  canonical-terminology.md  citation-strategy.md  claim-audit-trail-publishability.md  contribution-in-ml-scientific-process.md  contribution-taxonomy.md  drop-in-api-spec.md  drop-in-integration.md  evidence-to-claim-control.md  github-actions-workflow.md  journal-use-guide.md  ml-application-injection.md  pipeline-scaffolding-research.md  publisher-precheck-validation.md  research-pipeline.md  reviewer-indispensability.md  standards-gap-map.md  stem-manuscript-precheck.md  theory-of-change.md  user-repeatable-audit.md  workflow.md
examples/nls79_micro_environment/: README.md
manuscript/: main.tex
manuscript/sections/: abstract.tex  (+11 more)
pipeline/: README.md  pipeline.yaml
references/: references.bib
schemas/: claim-audit-trail.schema.json  drop-in-run.schema.json  publisher-precheck.schema.json
scripts/: inject_author_profile.py  validate_author_profile.py
templates/: claim-register-template.md  injection-example.py  journal-author-checklist.md  journal-reviewer-form.md  methods-reporting-template.md  standards-bridge-template.md
tests/: test_audit.py  test_claims.py  test_dropin.py  test_end_to_end_pipeline.py  test_pipeline.py  test_reviewer.py  test_standards.py  test_verification.py  test_workflow.py
(+30 files in other folders)
