[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "best-practices-git"
version = "0.1.0"
description = "Workflow helpers and manuscript scaffolding for publishable machine-learning research."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Author Name" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
bpg-workflow = "best_practices_git.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
